<resources>
    <string name="app_name">LOSTFINDER</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

    <!--login-->
    <string name="id_hint">아이디</string>
    <string name="password_hint">비밀번호</string>
    <string name="auto_text"><u>자동로그인</u></string>
    <string name="login">로그인</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="register">간편 회원가입</string>

    <!--register main-->
    <string name="register_title">회원가입</string>
    <string name="register_main_welcome">WELCOME</string>
    <string name="register_main_tv2"><b>잃어버린 물건</b>도\n <b>본인 물건</b>입니다. </string>
    <string name="register_main_submit">회원가입하기</string>
    <string name="register_main_service_intro">서비스 소개</string>
    <string name="register_main_service_center">고객센터</string>

    <!--register accent-->
    <string name="register_accent_tv1">이용약관</string>
    <string name="register_accent_tv2">가입 전에 반드시 읽어보시고,\n동의하셔야 회원가입이 완료됩니다.</string>
    <string name="register_accent_checkbox_service"><b>이용약관</b> <font color="#818181">(필수)</font></string>
    <string name="register_accent_checkbox_privacy"><b>개인정보 수집 및 이용안내</b> <font color="#818181">(필수)</font></string>
    <string name="register_accent_all">사이트 이용을 위한 이용약관 모두 동의합니다.</string>
    <string name="register_accent_next">다음단계로</string>
    <string name="register_accent_back">이전단계로</string>
    <string name="register_accent_checkbox_view">내용보기</string>

    <!--register certification-->
    <string name="register_certification_tv1">일반 회원인증</string>
    <string name="register_certification_phone">휴대폰 인증</string>
    <string name="register_certification_ipin">아이핀 인증</string>
    <string name="register_certification_content">아동(만 14세 미만)은 본인인증 후\n 부모님(법정대리인)동의가 필요합니다. \n\n
        법인 명의 휴대폰 사용자는 통신사 지점\n또는 대리점에 방문하여 법인명의\n실 사용자 등록 후 휴대폰 인증이 가능합니다.</string>
    <string name="register_certification_tel">(연락처, -없이 기입)</string>

    <!--register signin user-->
    <string name="register_signin_user_tv1">일반 회원가입</string>
    <string name="register_signin_user_id_hint">(아이디)</string>
    <string name="register_signin_user_password_hint">(비밀번호)</string>
    <string name="register_signin_user_password_check">비밀번호 확인</string>
    <string name="register_signin_user_password_check_hint">(비밀번호 확인)</string>

    <!--register signin address-->
    <string name="register_signin_address_nickname">닉네임</string>
    <string name="register_signin_address_nickname_hint">(닉네임)</string>
    <string name="register_signin_address_email">이메일 주소</string>
    <string name="register_signin_address_email_hint">(이메일 주소)</string>
    <string name="register_signin_address_address">거주지</string>
    <string name="register_signin_address_address_hint">(거주지)</string>
    <string name="register_signin_other_address">(나머지 주소)</string>

    <!--register done-->
    <string name="register_done_content">님 환영합니다!\n회원가입이 완료되었습니다.\n정보가 많을수록 찾을 확률과\n서비스혜택이 높아집니다!</string>


    <!--drawer header-->
    <string name="drawer_header_title">마이페이지</string>
    <string name="drawer_header_point"><b>내 포인트</b>\n</string>
    <string name="drawer_header_coupon">쿠폰함</string>
    <string name="drawer_header_performance">내 실적</string>

    <!--drawer menu-->
    <string name="header_menu_find">주인 찾아주기</string>
    <string name="header_menu_info">내 물건 등록현황</string>
    <string name="header_menu_choice">나를 택한 지인</string>
    <string name="header_menu_delivery">배송 서비스 현황 (준비중)</string>
    <string name="header_menu_message">주고 받은 메세지</string>
    <string name="header_menu_review">나의 리뷰</string>
    <string name="header_menu_point">포인트 쌓기</string>
    <string name="header_menu_charge">충전하기</string>

    <!--find id-->
    <string name="find_id_content_a"><b>휴대폰 번호</b>로 인증하기</string>
    <string name="find_id_content_b">내 명의(주민등록번호)로 가입한\n아이디를 찾을수 있습니다.</string>
    <string name="find_id_mail_content_a"><b>메일</b>로 인증하기</string>
    <string name="find_id_mail_content_b">본인확인 이메일 주소와 입력한 이메일 주소가\n같아야, 인증번호를 받을 수 있습니다.</string>

    <!--find password-->
    <string name="find_password_name">(이름)</string>
    <string name="find_password_phone_submit">휴대폰 인증</string>
    <string name="find_password_mail_submit">메일 인증</string>

    <!--home-->
    <string name="home_stuff_title"><b>내 물건</b> 현황</string>
    <string name="home_mission_title"><b>미션</b> 현황</string>
    <string name="home_giftcon_title">기프트콘 구매</string>
    <string name="home_terms"><b>이용약관</b></string>
    <string name="home_tel"><b>고객센터 010-6622-0000</b></string>
    <string name="home_accent"><b>개인정보 처리방침</b></string>

    <!--stuff nfc-->
    <string name="stuff_nfc_scan_title">물건 등록하기</string>
    <string name="stuff_nfc_scan_content">스마트폰 뒷면에\n스티커부분을 가져다 대주세요.</string>
    <string name="stuff_nfc_scan_submit">NFC 검색하기</string>

    <!--stuff camera-->
    <string name="stuff_camera_title">보관 전 물건 상태 사진은 필수에요!!\n손상에 대한 전에 일어난 사고에 대한 책임\n면책하기위해 꼭 필요합니다.</string>

    <!--stuff write-->
    <string name="stuff_write_title">물건 등록하기</string>
    <string name="stuff_write_name_layer">물건이름</string>
    <string name="stuff_write_name">(이름)</string>
    <string name="stuff_write_division_layer">물건분류</string>
    <string name="stuff_write_division_bag">가방</string>
    <string name="stuff_write_division_phone">스마트폰</string>
    <string name="stuff_write_division_wallet">지갑</string>
    <string name="stuff_write_division_electro">전자기기</string>
    <string name="stuff_write_division_etc">기타</string>
    <string name="stuff_write_address_layer">주소지</string>
    <string name="stuff_write_address_btn">주소찾기</string>
    <string name="stuff_write_tel_layer">비상연락망</string>
    <string name="stuff_write_tel">(연락처, -없이 기입)</string>
    <string name="stuff_write_submit">물건 등록</string>

    <!--point-->
    <string name="mypoint_title">내 포인트</string>

    <!--stuff mode-->
    <string name="stuff_mode_title">찾아주기</string>
    <string name="stuff_mode_content">찾아줄 방법을 선택해 주세요.</string>
    <string name="stuff_mode_direct_text1">직접주기</string>
    <string name="stuff_mode_direct_text2">정해진 문구로만 소통을 하여\n정해진 위치에서 직접 받습니다.</string>
    <string name="stuff_mode_direct_text3">단, 내가 습득했다는 정보를 주어\n상대방의 동의를 구해야 합니다.</string>
    <string name="stuff_mode_near_text1">가까운 곳에\n맡기기</string>
    <string name="sutff_mode_near_text2">현재위치를 공유하여 가까운\n센터를 선택할 수 있습니다.</string>
    <string name="stuff_mode_near_text3">센터지도까지 위치를 알려줍니다.</string>
    <string name="stuff_mode_message_text1">대화창\n만들기</string>
    <string name="stuff_mode_message_text2">대화창을 만들어 소통을 합니다.</string>
    <string name="stuff_mode_footer"><b><font color="#1b84dc">당신의 선행</font></b>으로 인해\n세상이 좀 더 밝아졌습니다.</string>

    <!--stuff dialog-->
    <string name="stuff_dialog_title_defualt"><b>등록 완료!</b></string>
    <string name="stuff_dialog_title_direct"><b>사전 동의 메시지 전송 완료!</b>\n대화창으로 이동합니다.</string>

    <!--chat header-->
    <string name="chat_header_title">대화창</string>

    <!--near-->
    <string name="near_title">가까운 곳에 맡기기</string>
    <string name="near_sub_title">가까운 센터 찾기</string>

    <!--intro-->
    <string name="intro_middle_text_top">점점 늘어나는 분실물에 비해 떨어지는 회수율,\n유실물 센터 운영에 대한 막대한 사회적 비용,\n유실물센터의 일방적이고 아날로그적인 운영,\n선의로 돌려주기 꺼리게 되는 현실.</string>
    <string name="intro_middle_text_bottom"><b>로스트파인더는</b>\n<b>NFC칩</b>과 <b>유실물센터 솔루션</b>을 가지고\n<b>Tag기술</b>을 통해 분실자에게 메시지 서비스와\n배송서비스 지원하는 서비스입니다.</string>
    <string name="intro_platform_content"><b>휴대폰 어플</b>과 <b>NFC 읽기/쓰기 기능</b>을 이용하여\n습득물 관련 회수 할 수 있는 <b>솔루션 마련!</b></string>
    <string name="intro_platform_point_content">1. 지정된 귀중품에 해당하는 경우에 포인트 적립가능\n\n2. 물건에 따라 차등된 포인트 적립\n\n3. 지정된 물건 이외에도 그 물건의 귀중성,\n경재성, 가치성에 따라 추기 포인트 적립가능.</string>
    <string name="intro_stuff_text">나의 물건 등록하러 가기</string>
    <string name="intro_event">~이벤트 배너~</string>
    <string name="intro_footer_notice">공지사항</string>
    <string name="intro_footer_faq">FAQ</string>
    <string name="intro_footer_ca">고객센터</string>
    <string name="intro_footer_certification">이용약관</string>
    <string name="intro_footer_tel">고객센터 010-6622-0000</string>
    <string name="intro_footer_secret">개인정보 처리방침</string>

</resources>
