<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/register_width"
    android:layout_height="wrap_content"
    android:background="@null">

    <TextView
        android:id="@+id/register_signin_user_tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:gravity="center_horizontal"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="4.7sp"
        android:text="@string/register_signin_user_tv1"
        android:textColor="@color/black"
        android:textSize="12.5sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_signin_user_id_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:letterSpacing="0.05"
        android:lineSpacingExtra="23.3sp"
        android:text="@string/id_hint"
        android:textColor="#cc000000"
        android:textSize="9.3sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_signin_user_tv1" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_signin_user_id_layer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/register_signin_user_id_tv"
        app:layout_constraintTop_toBottomOf="@id/register_signin_user_id_tv">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_signin_user_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/login_tint"
            android:hint="@string/register_signin_user_id_hint"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColorHint="#80000000"
            android:textSize="9.3sp" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/register_signin_user_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:letterSpacing="0.05"
        android:lineSpacingExtra="23.3sp"
        android:text="@string/password_hint"
        android:textColor="#cc000000"
        android:textSize="9.3sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_signin_user_id_layer" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_signin_user_password_layer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/register_signin_user_password_tv"
        app:layout_constraintTop_toBottomOf="@id/register_signin_user_password_tv">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_signin_user_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/login_tint"
            android:hint="@string/register_signin_user_password_hint"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColorHint="#80000000"
            android:textSize="9.3sp" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/register_signin_user_password_check_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:letterSpacing="0.05"
        android:lineSpacingExtra="23.3sp"
        android:text="@string/register_signin_user_password_check"
        android:textColor="#cc000000"
        android:textSize="9.3sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_signin_user_password_layer" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_signin_user_password_check_layer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/register_signin_user_password_check_tv"
        app:layout_constraintTop_toBottomOf="@id/register_signin_user_password_check_tv">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_signin_user_check_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/login_tint"
            android:hint="@string/register_signin_user_password_check_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColorHint="#80000000"
            android:textSize="9.3sp" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/register_signin_submit"
        android:layout_width="0dp"
        android:layout_height="34.7dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_round"
        android:gravity="center"
        android:text="@string/register_accent_next"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_signin_user_password_check_layer" />

    <TextView
        android:id="@+id/register_signin_back"
        android:layout_width="0dp"
        android:layout_height="34.7dp"
        android:layout_marginTop="4.3dp"
        android:background="@drawable/accent_back"
        android:gravity="center"
        android:text="@string/register_accent_back"
        android:textColor="@color/login_tint"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_signin_submit" />

</android.support.constraint.ConstraintLayout>