<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.Login">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="179dp"
        android:layout_height="66.3dp"
        android:layout_marginTop="101dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_id_layout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="42dp"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_logo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/login_tint"
            android:hint="@string/id_hint"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="10.2sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_id_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/login_tint"
            android:hint="@string/password_hint"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="10.2sp" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/login_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_text"
        android:textSize="8.5sp"
        app:layout_constraintEnd_toEndOf="@id/login_password_layout"
        app:layout_constraintTop_toBottomOf="@id/login_password_layout" />


    <Button
        android:id="@+id/login_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:background="@drawable/login_round"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/login_password_layout"
        app:layout_constraintStart_toStartOf="@id/login_password_layout"
        app:layout_constraintTop_toBottomOf="@id/login_auto" />

    <TextView
        android:id="@+id/login_find_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90.7dp"
        android:layout_marginTop="12dp"
        android:text="@string/find_id"
        android:textColor="@color/black"
        android:textSize="8.5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_submit"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/login_find_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20.3dp"
        android:text="@string/find_password"
        android:textColor="@color/black"
        android:textSize="8.5sp"
        app:layout_constraintBottom_toBottomOf="@id/login_find_id"
        app:layout_constraintStart_toEndOf="@id/login_find_id"
        app:layout_constraintTop_toTopOf="@id/login_find_id" />

    <TextView
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20.3dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="8.5sp"
        app:layout_constraintBottom_toBottomOf="@id/login_find_password"
        app:layout_constraintStart_toEndOf="@id/login_find_password"
        app:layout_constraintTop_toTopOf="@id/login_find_password" />


</android.support.constraint.ConstraintLayout>