<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="198.7dp"
    android:layout_height="164.3dp"
    android:background="@color/login_background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27.7dp"
        android:fontFamily="@font/basic"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="4.7sp"
        android:text="@string/find_id_mail_content_a"
        android:textColor="@color/black"
        android:textSize="12.2sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/find_password_mail_id"
        android:layout_width="106dp"
        android:layout_height="30dp"
        android:layout_marginTop="61dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/basic"
        android:hint="@string/register_signin_user_id_hint"
        android:inputType="text"
        android:textColorHint="#99000000"
        android:textSize="8.3sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/find_password_mail_name"
        android:layout_width="106dp"
        android:layout_height="30dp"
        android:layout_marginTop="94dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/basic"
        android:hint="@string/find_password_name"
        android:inputType="text"
        android:textColorHint="#99000000"
        android:textSize="8.3sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/find_password_mail_submit"
        android:layout_width="106dp"
        android:layout_height="25.7dp"
        android:layout_marginTop="125dp"
        android:background="@color/login_tint"
        android:fontFamily="@font/basic"
        android:gravity="center"
        android:letterSpacing="0.05"
        android:lineSpacingExtra="-2.3sp"
        android:text="@string/find_password_mail_submit"
        android:textColor="@color/white"
        android:textSize="9.3sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>